<resources>
    <string name="app_name">DispositivosMoviles</string>
    <string name="realizar_el_pago">Realizar el pago</string>
    <string name="carrito">Carrito</string>
    <string name="total">Total</string>
    <string name="costo_ejemplo">$0.00</string>
    <string name="escanear_productos">Escanear productos</string>
    <string name="pesar_productos">Pesar productos</string>
    <string name="producto_ejemplo">Pepsi 500ml</string>
    <string name="precio_ejemplo">$9.99</string>
    <string name="cantidad_ejemplo">5</string>
    <string name="cantidad_label">Cantidad</string>
    <string name="companyNamePlaceholder">Sistema de Autocobro</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Acceder</string>
    <string name="aun_no_estas_registrado">Aún no estás registrado?</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="signup">crear cuenta</string>
    <string name="ya_estas_registrado">Ya estás registrado?</string>
    <string name="accede_a_tu_cuenta">Accede a tu cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logo_de_la_empresa">Logo de la empresa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Administrador</string>
    <string name="activar">Activar</string>
    <string name="activar_cuenta">Activar cuenta</string>
    <string name="cargando">Cargando...</string>
    <string name="logout">Logout</string>
    <string name="administrador_desconectado">Administrador desconectado</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="m_todos_de_pago">Métodos de pago</string>
    <string name="placeholder_credit_card_number">XXXX-XXXX-XXXX-XXXX</string>
    <string name="visa">VISA</string>
    <string name="placeholder_name">John Doe</string>
    <string name="agregar_nuevo_m_todo">Agregar nuevo método</string>
    <string name="elige_el_metodo_de_pago">Elija el metodo de pago</string>
    <string name="escoja_el_metodo_de_pago">Escoja el método de pago</string>
    <string name="regresar">Regresar</string>
    <string name="agrega_una_nueva_tarjeta">Agrega una nueva tarjeta</string>
    <string name="numero_de_tarjeta">Número de tarjeta</string>
    <string name="placeholder_expiration_date">XX/XX</string>
    <string name="nombre_del_titular">Nombre del titular</string>
    <string name="fecha_de_caducidad">Fecha de caducidad</string>
    <string name="XX">XX</string>
    <string name="MM">MM</string>
    <string name="AAAA">AAAA</string>
    <string name="divider">/</string>
    <string name="tipo_de_tarjeta">Tipo de tarjeta</string>
    <string name="masterCard">MasterCard</string>
    <string name="a_adir">Añadir</string>
    <string name="a_adir_tarjeta">Añadir tarjeta</string>
    <string name="agregar_metodo_de_prueba">Agregar método de prueba</string>
    <string name="AA">AA</string>
    <string name="CVC">CVC</string>
    <string name="desactivar">DESACTIVAR</string>
    <string name="dispositivos_bt">DISPOSITIVOS BT</string>
    <string name="dispositivos">dispositivos</string>
    <string name="conectar">CONECTAR</string>
    <string name="luz_1">LUZ 1</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="luz_2">LUZ 2</string>
    <string name="texto_a_enviar">TEXTO A ENVIAR</string>
    <string name="texto_a_enviar_min">Texto a Enviar</string>
    <string name="enviar_texto">ENVIAR TEXTO</string>
    <string name="buscar_dispositivos">Buscar dispositivos</string>
    <string name="peso_gramos">Peso (gramos)</string>
    <string name="inserte_la_cantidad_del_producto_en_gramos">Inserte la cantidad del producto en gramos</string>
    <string name="usar_bluetooth">Usar bluetooth</string>
    <string name="a_adir_producto">Añadir producto</string>
    <string name="a_ada_una_fruta_o_verdura">Añada una fruta o verdura</string>

    <!-- Checkout activity -->
</resources>