<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BluetoothFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idBtnOnBT"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activar" />

                <Button
                    android:id="@+id/idBtnOffBT"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/desactivar" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/idBtnDispBT"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buscar_dispositivos" />

                <Spinner
                    android:id="@+id/idSpinDisp"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/dispositivos" />
            </RelativeLayout>

            <Button
                android:id="@+id/idBtnConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/conectar" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/buttonGoBack"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:text="@string/regresar"
                app:cornerRadius="20dp" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>