<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/black"
    tools:context=".WeightProductsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp">

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_ada_una_fruta_o_verdura"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <Button
            android:layout_below="@id/textViewHeader"
            android:layout_marginTop="20dp"
            android:id="@+id/buttonUsarBluetooth"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/usar_bluetooth"
            app:cornerRadius="20dp"/>

        <RelativeLayout
            android:layout_below="@id/buttonUsarBluetooth"
            android:layout_above="@id/navButtonsLayout"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_gramos"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/inserte_la_cantidad_del_producto_en_gramos"
                android:layout_below="@id/textViewPeso"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fruitsRecyclerView"
                android:layout_below="@+id/editTextPeso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/navButtonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/buttonGoBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_200"
                android:text="@string/regresar"
                app:cornerRadius="20dp" />
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>