<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoppingCartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_200"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/carrito"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logoutButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="Logout"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logout"/>
        </RelativeLayout>

        <Button
            android:id="@+id/scanButton"
            android:layout_below="@+id/appBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/escanear_productos"
            android:layout_centerHorizontal="true"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cantidadTextView"
            android:layout_below="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentRight="true"
            android:text="@string/cantidad_label"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@+id/cantidadTextView"
            android:layout_above="@id/totalLayoutMain"/>

        <include
            android:id="@+id/totalLayoutMain"
            layout="@layout/total_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkoutLayout" />

        <RelativeLayout
            android:id="@+id/checkoutLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" >

            <Button
                android:id="@+id/checkoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/realizar_el_pago"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/adminNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkoutButton"
                android:layout_centerHorizontal="true"
                android:text="@string/administrador_desconectado"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>