<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_200"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/header"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/admin"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logoutButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logout"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logout"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/adminStatusTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cargando"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:textSize="40sp"/>

                <Button
                    android:id="@+id/activarCuentaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/teal_700"
                    android:layout_below="@id/adminStatusTextView"
                    android:text="@string/activar_cuenta"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/adminNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cargando"
                    android:textColor="@color/black"
                    android:layout_below="@+id/activarCuentaButton"
                    android:layout_centerHorizontal="true"
                    android:textSize="40sp"/>
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>